# ableton

./: README.txt
edv/: edv.animation.js  edv.applychord.maxpat  edv.counter.maxpat  edv.fac.maxpat  edv.midi-maxonenote.amxd  edv.midi-patterner.amxd  edv.moat.maxpat  edv.noteselector.maxpat  edv.offercancel.maxpat  edv.patterner.maxpat  edv.push.js  edv.push.maxpat  edv.radiobutton.maxpat  edv.scaleselector.maxpat
edv/edv.midi-patterner/: README.md  arpeggio
edv/patterner/: edv.invertchord.maxpat  edv.maxonenote.maxpat  edv.midi-noterepeater.amxd  edv.midi-patterner.amxd  edv.noterepeater.maxpat  edv.patterner-chords.txt  edv.patterner.maxpat  edv.scaleselector-scales.txt
edv/patterner/edv.midi-patterner/: arpeggio.txt  comptine.txt
hang/: Handpan.Push.amxd  handpan.ctrl.push.js  handpan.generic.js  handpan.iface.push2.js  handpan.iface.state.js  push2.buttonmatrix.js  push2.controller.js  util.grid.js
parse-ableton-files/: .gitignore  parse-ableton-files.cabal
parse-ableton-files/src/: CmdLine.hs  LUTs.hs  Main.hs  Util.hs
parse-ableton-files/src/Ableton/: MultiSampleParts.hs  Schema.hs
parse-ableton-files/src/Util/: Interval.hs  IntervalMap.hs  SOP.hs
parse-ableton-files/src/Util/Interval/: Split.hs
parse-ableton-files/src/XML/: Aux.hs  Parser.hs  TypeDriven.hs
parse-ableton-files/src/XML/TypeDriven/: API.hs  AttrNode.hs  Node.hs
parse-sampler-rack/: .gitignore  parse-sampler-rack.cabal
parse-sampler-rack/src/: CmdLine.hs  Main.hs
parse-sampler-rack/src/Ableton/: Schema.hs
parse-sampler-rack/src/Util/: SOP.hs
parse-sampler-rack/src/XML/: Attr.hs  TypeDriven.hs
trichord/: README.md  Trichord.amxd  buttonmatrix.js  colorgrid.js  grid.js  ourtrack.demo.amxd  ourtrack.demo.js  ourtrack.js  push.js  trichord.amxd  trichord.js  trichord.maxpat  trichordstate.js
