cabal-version:       >=1.10
name:                parse-sampler-rack
version:             0.1.0.0
synopsis:            Parse Ableton Sampler Instrument Rack data
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
build-type:          Simple

executable parse-sampler-rack
  main-is:             Main.hs
  other-modules:       Ableton.Schema
                       CmdLine
                       Util.SOP
                       XML.Attr
                       XML.Aux
                       XML.Parser
                       XML.TypeDriven
  build-depends:       base >=4.14 && <4.15
                     , conduit
                     , conduit-extra
                     , exceptions
                     , generics-sop
                     , optparse-applicative
                     , sop-core
                     , syb
                     , text
                     , xml-conduit
                     , xml-types
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wredundant-constraints
                       -Wno-unticked-promoted-constructors
  default-extensions:  ConstraintKinds
                       DataKinds
                       DeriveAnyClass
                       DeriveDataTypeable
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       EmptyDataDeriving
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiParamTypeClasses
                       PolyKinds
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       UndecidableSuperClasses
